human-intervention-logs/io.opentelemetry.semconv:opentelemetry-semconv:1.30.0/gradle-test/gradle-test-2026-05-04T13-57-02-857017Z.log
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE

> Configure project :
GraalVM Reachability Metadata TCK
---------------------------------

> Task :tckTest
====================
Testing library: io.opentelemetry.semconv:opentelemetry-semconv:1.30.0
Command: `/home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5784-f3df0897/gradlew nativeTest`
Executing test...
-------
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE
> Task :compileJava NO-SOURCE
> Task :processResources NO-SOURCE
> Task :classes UP-TO-DATE
> Task :jar
> Task :checkTestTimeoutAnnotations
> Task :processTestResources NO-SOURCE
> Task :tck-test-support:compileJava
> Task :tck-test-support:processResources NO-SOURCE
> Task :tck-test-support:classes
> Task :tck-test-support:jar

> Task :compileTestJava FAILED
/home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5784-f3df0897/tests/src/io.opentelemetry.semconv/opentelemetry-semconv/1.30.0/src/test/java/io_opentelemetry_semconv/opentelemetry_semconv/Opentelemetry_semconvTest.java:49: error: cannot find symbol
        assertThat(SchemaUrls.V1_23_1).isEqualTo("https://opentelemetry.io/schemas/1.23.1");
                             ^
  symbol:   variable V1_23_1
  location: class SchemaUrls
/home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5784-f3df0897/tests/src/io.opentelemetry.semconv/opentelemetry-semconv/1.30.0/src/test/java/io_opentelemetry_semconv/opentelemetry_semconv/Opentelemetry_semconvTest.java:50: error: cannot find symbol
        assertThat(SchemaUrls.V1_22_0).isEqualTo("https://opentelemetry.io/schemas/1.22.0");
                             ^
  symbol:   variable V1_22_0
  location: class SchemaUrls
/home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5784-f3df0897/tests/src/io.opentelemetry.semconv/opentelemetry-semconv/1.30.0/src/test/java/io_opentelemetry_semconv/opentelemetry_semconv/Opentelemetry_semconvTest.java:217: error: cannot find symbol
                .put(ExceptionAttributes.EXCEPTION_ESCAPED, true)
                                        ^
  symbol:   variable EXCEPTION_ESCAPED
  location: class ExceptionAttributes
/home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5784-f3df0897/tests/src/io.opentelemetry.semconv/opentelemetry-semconv/1.30.0/src/test/java/io_opentelemetry_semconv/opentelemetry_semconv/Opentelemetry_semconvTest.java:236: error: cannot find symbol
        assertThat(ExceptionAttributes.EXCEPTION_ESCAPED).isEqualTo(AttributeKey.booleanKey("exception.escaped"));
                                      ^
  symbol:   variable EXCEPTION_ESCAPED
  location: class ExceptionAttributes
/home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5784-f3df0897/tests/src/io.opentelemetry.semconv/opentelemetry-semconv/1.30.0/src/test/java/io_opentelemetry_semconv/opentelemetry_semconv/Opentelemetry_semconvTest.java:247: error: cannot find symbol
        assertThat(attributes.get(ExceptionAttributes.EXCEPTION_ESCAPED)).isTrue();
                                                     ^
  symbol:   variable EXCEPTION_ESCAPED
  location: class ExceptionAttributes
5 errors

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5784-f3df0897/tests/src/io.opentelemetry.semconv/opentelemetry-semconv/1.30.0/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  /home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5784-f3df0897/tests/src/io.opentelemetry.semconv/opentelemetry-semconv/1.30.0/src/test/java/io_opentelemetry_semconv/opentelemetry_semconv/Opentelemetry_semconvTest.java:49: error: cannot find symbol
          assertThat(SchemaUrls.V1_23_1).isEqualTo("https://opentelemetry.io/schemas/1.23.1");
                               ^
    symbol:   variable V1_23_1
    location: class SchemaUrls
  /home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5784-f3df0897/tests/src/io.opentelemetry.semconv/opentelemetry-semconv/1.30.0/src/test/java/io_opentelemetry_semconv/opentelemetry_semconv/Opentelemetry_semconvTest.java:50: error: cannot find symbol
          assertThat(SchemaUrls.V1_22_0).isEqualTo("https://opentelemetry.io/schemas/1.22.0");
                               ^
    symbol:   variable V1_22_0
    location: class SchemaUrls
  /home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5784-f3df0897/tests/src/io.opentelemetry.semconv/opentelemetry-semconv/1.30.0/src/test/java/io_opentelemetry_semconv/opentelemetry_semconv/Opentelemetry_semconvTest.java:217: error: cannot find symbol
                  .put(ExceptionAttributes.EXCEPTION_ESCAPED, true)
                                          ^
    symbol:   variable EXCEPTION_ESCAPED
    location: class ExceptionAttributes
  /home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5784-f3df0897/tests/src/io.opentelemetry.semconv/opentelemetry-semconv/1.30.0/src/test/java/io_opentelemetry_semconv/opentelemetry_semconv/Opentelemetry_semconvTest.java:236: error: cannot find symbol
          assertThat(ExceptionAttributes.EXCEPTION_ESCAPED).isEqualTo(AttributeKey.booleanKey("exception.escaped"));
                                        ^
    symbol:   variable EXCEPTION_ESCAPED
    location: class ExceptionAttributes
  /home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5784-f3df0897/tests/src/io.opentelemetry.semconv/opentelemetry-semconv/1.30.0/src/test/java/io_opentelemetry_semconv/opentelemetry_semconv/Opentelemetry_semconvTest.java:247: error: cannot find symbol
          assertThat(attributes.get(ExceptionAttributes.EXCEPTION_ESCAPED)).isTrue();
                                                       ^
    symbol:   variable EXCEPTION_ESCAPED
    location: class ExceptionAttributes
  5 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 2s
13 actionable tasks: 5 executed, 8 up-to-date

> Task :tckTest FAILED

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5784-f3df0897/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':tckTest'.
> Test for io.opentelemetry.semconv:opentelemetry-semconv:1.30.0 failed with exit code 1.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to generate a Build Scan (Powered by Develocity).
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 2s
9 actionable tasks: 1 executed, 8 up-to-date
